--- a/index.css
+++ b/index.css
@@ -9,13 +9,14 @@
 .home{
     background-color: rgb(255, 255, 255);
     display: flex;
+    /* flex-wrap: wrap; */
     border: 10PX;
     justify-content: center;
-    margin: 60px;
-    color: white;
+    /* padding: 60px; */
+    /* color: white; */
     /* box-shadow: 20px; */
-    margin-top: 100px;
-    margin-left: 300px;
+     margin-top: 90px;
+    padding-left: 0px;
 }
 .card1{
     background-color: orange;
@@ -23,14 +24,14 @@
     padding: 40px;
     height: 390px;
     width: 250px;
-    position: absolute;
-    margin-right: 890px;
-    border-radius: 5px;
+    /* position: absolute; */
+    /* margin-right: 890px; */
+    border-radius: 5px 0 0 5px;
 }
  h1{
     padding-top: 70px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 3rem;
+    font-size: 30px;
     margin-right: 300px;
     line-height: 80px;
 }
@@ -54,9 +55,9 @@
     padding: 40px;
     height: 390px;
     width: 250px;
-    border-radius: 5px;
-    position: absolute;
-    margin-right: 300px;
+    /* border-radius: 5px; */
+    /* position: absolute; */
+    /* margin-right: 300px; */
  }
  .card3{
     background-color: rgb(8, 85, 81);
@@ -64,8 +65,8 @@
     padding: 40px;
     height: 390px;
     width: 250px;
-    margin-left: 340px;
-    border-radius: 5px;
+    /* margin-left: 340px; */
+    border-radius: 0 5px 5px 0;
  }
  .btn2{
     background-color: white;
@@ -74,7 +75,7 @@
     border: none;
     border-radius: 20px;
     margin-top: 30px;
-    color:rgb(9, 61, 61);
+    color:rgb(12, 168, 168);
     font-size: 16px;
  }
  .btn3{
@@ -92,10 +93,31 @@
     width: 50px;
     position: absolute;
     border-radius: 50%;
-    background-color: rgb(214, 156, 19);
+   
  }
  span i{
    padding-top: 20px;
-   margin-left:33px;
+   margin-left:30px;
    font-size: 30px;
  }
+
+@media screen and (max-width: 800px){
+   html{
+      /* width: 90px; */
+   }
+   body{
+      width: 100px;
+      /* background-color: rgb(199, 10, 10); */
+   }
+   .home{
+      /* background-color: black; */
+   margin-right: -200px;
+/* position: fixed; */
+      /* width: 100px; */
+      display: block;
+      /* flex-wrap: wrap; */
+   }
+   .card1{
+      /* width: 100px; */
+   }
+}
