--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
     border: 10PX;
     justify-content: center;
     /* padding: 60px; */
-    /* color: white; */
+    color: white;
     /* box-shadow: 20px; */
      margin-top: 90px;
     padding-left: 0px;
@@ -31,12 +31,12 @@
  h1{
     padding-top: 70px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
+    font-size: 35px;
     margin-right: 300px;
     line-height: 80px;
 }
  p{
-    font-size: 18px;
+    font-size: 20px;
     padding-top: 2px;
  }
  .btn1{
@@ -44,10 +44,10 @@
     height: 50px;
     width: 160px;
     border: none;
-    border-radius: 20px;
+    border-radius: 25px;
     margin-top: 30px;
     color: orange;
-    font-size: 16px;
+    font-size: 18px;
  }
  .card2{
     background-color:rgb(20, 125, 127);
@@ -73,20 +73,20 @@
     height: 50px;
     width: 160px;
     border: none;
-    border-radius: 20px;
+    border-radius: 25px;
     margin-top: 30px;
     color:rgb(12, 168, 168);
-    font-size: 16px;
+    font-size: 18px;
  }
  .btn3{
     background-color: white;
     height: 50px;
     width: 160px;
     border: none;
-    border-radius: 20px;
+    border-radius: 25px;
     margin-top: 30px;
     color: rgb(6, 65, 62);
-    font-size: 16px;
+    font-size: 18px;
  }
  span{
     height: 50px;
@@ -110,10 +110,10 @@
       /* background-color: rgb(199, 10, 10); */
    }
    .home{
+
       /* background-color: black; */
    margin-right: -200px;
-/* position: fixed; */
-      /* width: 100px; */
+padding-left: 40px;
       display: block;
       /* flex-wrap: wrap; */
    }
