--- a/index.css
+++ b/index.css
@@ -3,11 +3,11 @@
     padding: 0;
 }
 .holecontent{
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
 }
 .home{
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
     display: flex;
     /* flex-wrap: wrap; */
     border: 10PX;
@@ -105,19 +105,28 @@
    html{
       /* width: 90px; */
    }
-   body{
-      width: 100px;
-      /* background-color: rgb(199, 10, 10); */
+   .holecontent{
+      /* width: 1000px;
+      background-color: brown; */
    }
+  body{
+   /* background-color: black; */
+   /* column-width: 100px; */
+  }
    .home{
-
-      /* background-color: black; */
-   margin-right: -200px;
-padding-left: 40px;
+      width: 100px;
+justify-content: center;
+margin-left: 40px;
       display: block;
       /* flex-wrap: wrap; */
    }
    .card1{
-      /* width: 100px; */
+      /* width: 900px; */
    }
+
+}
+@media screen and (max-width: 400px){
+.home{
+   margin-left: 18px;
+}
 }
